--- a/src/demo/atari/block.scss
+++ b/src/demo/atari/block.scss
@@ -1,6 +1,10 @@
 .block {
   background-color: gray;
-  border: 2px solid black;
 
   position: absolute;
+  box-sizing: border-box;
+}
+
+.slide {
+  border: 2px solid black;
 }
