--- a/src/demo/atari/atariBlocks.scss
+++ b/src/demo/atari/atariBlocks.scss
@@ -1,9 +1,9 @@
-.hide-wrapper {
+.atari-wrapper {
   position: absolute;
 
   //   border: 1px solid blue;
 
-  .hide {
+  .atari {
     position: absolute;
 
     background-color: red;
