--- a/src/demo/atari/ball.scss
+++ b/src/demo/atari/ball.scss
@@ -1,7 +1,8 @@
 .ball {
   position: absolute;
 
-  background-color: gray;
+  background-color: lightgray;
+  border: 2px solid black;
 
   aspect-ratio: 1/1;
 
