--- a/src/demo/atari/block.scss
+++ b/src/demo/atari/block.scss
@@ -1,10 +1,13 @@
 .block {
   background-color: gray;
+  border: 2px solid black;
+
+  box-sizing: border-box;
 
   position: absolute;
   box-sizing: border-box;
 }
 
 .slide {
-  border: 2px solid black;
+  background-color: peru;
 }
