--- a/src/demo/breakout/main.scss
+++ b/src/demo/breakout/main.scss
@@ -1,10 +1,16 @@
 #app {
-  border: 1px solid red;
+  //   border: 1px solid red;
   position: relative;
+
   height: 90vh;
   width: 90vw;
-  margin: 0;
+
+  margin: auto;
   padding: 0;
+
+  z-index: 9;
+
+  background-color: white;
 }
 
 body {
