--- a/src/demo/livemj.scss
+++ b/src/demo/livemj.scss
@@ -12,6 +12,7 @@ div.cdnmathjax > div > div:nth-of-type(1) {
 }
 
 div.cdnmathjax > div > div:nth-of-type(2) {
+  min-width: 10rem;
   flex-grow: 1;
   background-color: white;
   color: black;
