--- a/src/fancy/timeline/navbar.scss
+++ b/src/fancy/timeline/navbar.scss
@@ -1,69 +1,3 @@
-nav {
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    display: grid;
-    grid-template-columns: 1fr auto auto;
-
-    li {
-      width: fit-content;
-      display: block;
-      margin: auto;
-      left: 0;
-      right: 0;
-      position: relative;
-
-      input[type="text"] {
-        display: block;
-        padding: var(--pad);
-
-        width: calc(100% - 10rem);
-        min-width: 5rem;
-
-        margin: auto;
-
-        border: var(--bdr);
-        border-radius: var(--rad);
-
-        background-color: inherit;
-
-        transition-property: background-color;
-      }
-
-      input[name="search"]:focus {
-        background-color: var(--lightgrey);
-      }
-
-      a.login {
-        background-color: inherit;
-        border: var(--bdr);
-
-        color: inherit;
-
-        transition-property: background-color;
-      }
-
-      a.login:hover {
-        background-color: var(--lightgrey);
-      }
-
-      a.login:active {
-        background-color: inherit;
-      }
-    }
-
-    li:has(a) + li:has(a) {
-      margin-left: calc(var(--mgn) / 2);
-    }
-
-    li:has(input) {
-      width: 100%;
-    }
-  }
-}
-
 div#navbar {
   margin-bottom: var(--mgn);
   padding: var(--pad);
@@ -74,4 +8,70 @@ div#navbar {
   border-bottom: var(--bdr);
 
   z-index: 7;
+
+  nav {
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      display: grid;
+      grid-template-columns: 1fr auto auto;
+
+      li {
+        width: fit-content;
+        display: block;
+        margin: auto;
+        left: 0;
+        right: 0;
+        position: relative;
+
+        input[type="text"] {
+          display: block;
+          padding: var(--pad);
+
+          width: calc(100% - 10rem);
+          min-width: 5rem;
+
+          margin: auto;
+
+          border: var(--bdr);
+          border-radius: var(--rad);
+
+          background-color: inherit;
+
+          transition-property: background-color;
+        }
+
+        input[name="search"]:focus {
+          background-color: var(--lightgrey);
+        }
+
+        .login {
+          background-color: inherit;
+          border: var(--bdr);
+
+          color: inherit;
+
+          transition-property: background-color;
+        }
+
+        .login:hover {
+          background-color: var(--lightgrey);
+        }
+
+        .login:active {
+          background-color: inherit;
+        }
+      }
+
+      li:has(.nav) + li:has(.nav) {
+        margin-left: calc(var(--mgn) / 2);
+      }
+
+      li:has(input) {
+        width: 100%;
+      }
+    }
+  }
 }
