add google font, logo, nice login form

--- a/src/fancy/timeline/colorButton.scss
+++ b/src/fancy/timeline/colorButton.scss
@@ -5,6 +5,8 @@ a.color-button {
   border: none;
 
   transition-property: background-color;
+
+  vertical-align: middle;
 }
 
 button.color-button:hover,
