--- a/src/fancy/timeline/header.scss
+++ b/src/fancy/timeline/header.scss
@@ -67,3 +67,22 @@
     }
   }
 }
+
+.logo {
+  font-family: "Homemade Apple", cursive;
+  font-size: 1.5rem;
+
+  width: fit-content;
+
+  background: linear-gradient(90deg, hotpink, dodgerblue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  padding-left: 0.4em;
+  padding-right: 0.2em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+
+  margin: auto;
+}
