--- a/src/fancy/timeline/header.scss
+++ b/src/fancy/timeline/header.scss
@@ -74,7 +74,7 @@
 
   width: fit-content;
 
-  background: linear-gradient(90deg, hotpink, dodgerblue);
+  background: linear-gradient(90deg, hotpink, dodgerblue, yellowgreen);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
