--- a/src/fancy/timeline/article.scss
+++ b/src/fancy/timeline/article.scss
@@ -1,3 +1,5 @@
+@use "./timeline.scss";
+
 div.posts {
   counter-reset: count 0; // for displaying articles' order
 
@@ -64,6 +66,17 @@ div.posts {
       font-size: 0.9rem;
       color: var(--grey);
       font-style: italic;
+
+      vertical-align: middle;
+    }
+    time::before {
+      @include timeline.google-font-icon();
+      content: "\e889"; // history clock
+      font-size: 1.2em;
+      padding: 0;
+      margin: 0;
+
+      vertical-align: sub;
     }
 
     h1 {
