--- a/src/fancy/software-landing/screenBox.scss
+++ b/src/fancy/software-landing/screenBox.scss
@@ -1,10 +1,40 @@
+@use "./software-landing.scss";
+
 .screenbox {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: auto;
 
+  justify-content: space-around;
+  justify-items: center;
+  align-items: center;
+
+  @include software-landing.border-rad-box();
+
+  box-sizing: border-box;
   overflow: auto;
+
+  [class^="grid"] {
+    display: grid;
+    margin: auto;
+
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+  }
+
+  @for $i from 1 to 3 {
+    @for $j from 1 to 3 {
+      .grid#{$i}#{$j} {
+        grid-template-columns: #{$i}fr #{$j}fr;
+      }
+    }
+  }
+
+  h1 {
+    font-size: 2.3rem;
+  }
 }
