--- a/src/fancy/software-landing/screenBox.scss
+++ b/src/fancy/software-landing/screenBox.scss
@@ -12,7 +12,10 @@
   justify-items: center;
   align-items: center;
 
-  @include software-landing.border-rad-box();
+  // @include software-landing.border-rad-box();
+  padding-left: calc(var(--pad) * 2);
+  padding-right: calc(var(--pad) * 2);
+  background-color: var(--bkg);
 
   box-sizing: border-box;
   overflow: auto;
@@ -36,5 +39,16 @@
 
   h1 {
     font-size: 2.3rem;
+  }
+  h2 {
+    text-decoration: underline;
+    text-decoration-color: var(--clr1);
+    text-decoration-thickness: 0.2em;
+  }
+  h2 ~ p:nth-of-type(1) {
+    color: var(--color);
+  }
+  h2 ~ p {
+    color: var(--mid0);
   }
 }
