--- a/src/fancy/software-landing/header.scss
+++ b/src/fancy/software-landing/header.scss
@@ -16,16 +16,17 @@ header {
     // hover color change
     a,
     li {
-      font-size: 1rem;
-      color: var(--mid0);
+      @include software-landing.underline-anchor-normal();
       text-decoration: none;
-
-      transition-property: color;
-      @include software-landing.transits();
     }
     li.d0:hover > a,
     a:hover {
-      color: var(--color);
+      @include software-landing.underline-anchor-hover();
+      text-decoration: none;
+    }
+    a:active {
+      @include software-landing.underline-anchor-active();
+      text-decoration: none;
     }
     a:has(.logo) {
       color: var(--color);
@@ -76,11 +77,10 @@ header {
     }
 
     nav {
+      @include software-landing.resetlist();
+
       ul,
       li {
-        list-style: none;
-        padding: 0;
-        margin: 0;
         position: relative;
       }
 
@@ -113,6 +113,9 @@ header {
         ul {
           li {
             margin: calc(var(--pad) * 2) var(--pad);
+            a {
+              @include software-landing.hover-anchor();
+            }
           }
           li li:before {
             content: "- ";
@@ -128,7 +131,7 @@ header {
     }
     nav > ul {
       display: grid;
-      // menu items | login signup
+      // 4 menu items | login signup
       grid-template-columns: repeat(4, 1fr) auto auto;
       padding: var(--pad) calc(var(--pad) * 3);
 
