--- a/src/fancy/software-landing/screenBox.scss
+++ b/src/fancy/software-landing/screenBox.scss
@@ -1,14 +1,15 @@
 @use "./software-landing.scss";
 
 .screenbox {
-  width: 100%;
+  max-width: 100%;
+  width: 70rem;
   min-height: 100vh;
 
   @include software-landing.placecenter();
 
   margin: auto;
 
-  // @include software-landing.border-rad-box();
+  padding: var(--pad);
   padding-left: calc(var(--pad) * 2);
   padding-right: calc(var(--pad) * 2);
   background-color: var(--bkg);
