--- a/src/fancy/software-landing/codeBox.scss
+++ b/src/fancy/software-landing/codeBox.scss
@@ -28,7 +28,32 @@
   max-height: 100%;
 
   margin: auto;
+
   overflow: auto;
+  --_scroll: 0.3rem;
+  scrollbar-width: thin;
+  &::-webkit-scrollbar {
+    width: var(--_scroll);
+    height: var(--_scroll);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--_gray);
+    border-radius: var(--_scroll);
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: var(--_lightgray);
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-button {
+    display: hidden;
+    width: var(--_scroll);
+    height: var(--_scroll);
+  }
 
   display: grid;
   grid-template-columns: 1fr;
