move svg files to public

--- a/src/style.scss
+++ b/src/style.scss
@@ -25,7 +25,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--white);
-  background-image: url("/src/circle.svg");
+  background-image: url("/circle.svg");
 
   font-family: "Yu Gothic UI", sans-serif;
 }
