--- a/src/demo/colorpicker/App.scss
+++ b/src/demo/colorpicker/App.scss
@@ -5,3 +5,14 @@ main {
 
   margin: 1em;
 }
+
+div.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.preview {
+  width: 200px;
+  aspect-ratio: 1/1;
+}
